src/objects/TriggersSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A custom setting for all triggers within this application to enable/disable one &quot;or&quot; many trigger contexts (before insert, before update, before delete, after insert, after update, after delete, after undelete).</description>
    <fields>
        <fullName>IsDeactivateAfterDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeactivateAfterDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeactivateAfterInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeactivateAfterInsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeactivateAfterUnDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeactivateAfterUnDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeactivateAfterUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeactivateAfterUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeactivateBeforeDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeactivateBeforeDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeactivateBeforeInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeactivateBeforeInsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeactivateBeforeUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeactivateBeforeUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeactivateTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeactivateTrigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Triggers Setting</label>
</CustomObject>